Added Test steps

--- a/src/test/resources/conf.properties
+++ b/src/test/resources/conf.properties
@@ -1,10 +1,11 @@
 environment=dev
 implicitWait=10
 explicitWait=20
+waitTime=20
 screenshot.on.fail=true
 log.level=INFO
 headless.mode=true
 report.folder=reports/
 browsers=chrome,firefox,safari
-url=https://bwpool.azurewebsites.net
+url=https://bwpool.azurewebsites.net/
 resolutions={"desktop":"1920x1080","laptop":"1366x768","tablet":"1536x2048","mobile":"375x667"}
