--- a/src/test/resources/conf.properties
+++ b/src/test/resources/conf.properties
@@ -8,4 +8,5 @@ headless.mode=true
 report.folder=reports/
 browsers=chrome,firefox,safari
 url=https://bwpool.azurewebsites.net/
+mainPage=Calendar
 resolutions={"desktop":"1920x1080","laptop":"1366x768","tablet":"1536x2048","mobile":"375x667"}
