Added FileHandler class

--- a/src/test/resources/conf.properties
+++ b/src/test/resources/conf.properties
@@ -2,6 +2,8 @@ environment=dev
 implicitWait=10
 explicitWait=20
 waitTime=20
+downloadWaitTime=10
+download.folder=downloads/
 screenshot.on.fail=true
 log.level=INFO
 headless.mode=true
