--- a/src/test/resources/conf.properties
+++ b/src/test/resources/conf.properties
@@ -1,14 +1,16 @@
-environment=dev
-implicitWait=10
-explicitWait=20
+os={"windows","linux"}
 waitTime=20
 downloadWaitTime=10
-download.folder=downloads/
-screenshot.on.fail=true
+download.folder=\\src\\test\\resources\\downloads\\
 log.level=INFO
-headless.mode=true
-report.folder=reports/
-browsers=chrome,firefox,safari
+report.folder=\\src\\test\\resources\\reports\\
 url=https://bwpool.azurewebsites.net/
 mainPage=Calendar
-resolutions={"desktop":"1920x1080","laptop":"1366x768","tablet":"1536x2048","mobile":"375x667"}
+resolution.desktop=1920x1080
+resolution.laptop=1366x768
+resolution.tablet=1536x2048
+resolution.mobile=375x667
+resolutions={"desktop"}
+browsers={"chrome", "firefox"}
+parallel=false
+parallel.threads=4
