--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
         <cucumber.version>7.14.0</cucumber.version>
         <cucumber.pico.container.version>7.14.0</cucumber.pico.container.version>
         <webdriver.manager.version>5.5.3</webdriver.manager.version>
-        <apache.poi.version>5.2.3</apache.poi.version>
+        <apache.poi.version>5.2.4</apache.poi.version>
         <rest.assured.version>5.3.2</rest.assured.version>
         <maven.surfire.plugin.version>3.1.2</maven.surfire.plugin.version>
         <exec.maven.plugin.version>3.1.0</exec.maven.plugin.version>
@@ -76,6 +76,11 @@
             <artifactId>poi</artifactId>
             <version>${apache.poi.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>${apache.poi.version}</version>
+        </dependency>
         <!-- Rest Assured 5 -->
         <dependency>
             <groupId>io.rest-assured</groupId>
@@ -112,6 +117,7 @@
             <artifactId>extentreports-cucumber7-adapter</artifactId>
             <version>${extentreports.cucumber7.adapter.version}</version>
         </dependency>
+
     </dependencies>
 
     <build>
