--- a/src/test/resources/conf.properties
+++ b/src/test/resources/conf.properties
@@ -4,6 +4,7 @@ downloadWaitTime=10
 download.folder=\\src\\test\\resources\\downloads\\
 log.level=INFO
 report.folder=\\src\\test\\resources\\reports\\
+report.name=BWPool_
 url=https://bwpool.azurewebsites.net/
 mainPage=Calendar
 resolution.desktop=1920x1080
