--- a/src/test/resources/extent.properties
+++ b/src/test/resources/extent.properties
@@ -1,24 +1,13 @@
-extent.reporter.spark.start=true
-extent.reporter.spark.out=Reports/Spark.html
-
-#PDF Report
-extent.reporter.pdf.start=false
-extent.reporter.pdf.out=PdfReport/ExtentPdf.pdf
-
-#HTML Report
-extent.reporter.html.start=true
-extent.reporter.html.out=HtmlReport/ExtentHtml.html
-
-#FolderName
-basefolder.name=ExtentReports/SparkReport_
+#Sat Nov 04 20:19:01 CET 2023
 basefolder.datetimepattern=d_MMM_YY HH_mm_ss
-
-#Screenshot
+basefolder.name=src/test/resources/reports/BWPool_
+extent.reporter.html.out=ExtentHtml.html
+extent.reporter.html.start=true
+extent.reporter.pdf.out=ExtentPdf.pdf
+extent.reporter.pdf.start=false
+extent.reporter.spark.base64imagesrc=true
+extent.reporter.spark.out=Spark.html
+extent.reporter.spark.start=true
 screenshot.dir=/Screenshots/
 screenshot.rel.path=../Screenshots/
-
-#Base64
-extent.reporter.spark.base64imagesrc=true
-
-#System Info
-systeminfo.os=windows
+systeminfo.os=Windows 11
