--- a/src/test/resources/conf.properties
+++ b/src/test/resources/conf.properties
@@ -11,7 +11,7 @@ resolution.desktop=1920x1080
 resolution.laptop=1366x768
 resolution.tablet=1536x2048
 resolution.mobile=375x667
-resolutions={"desktop", "mobile"}
+resolutions={"desktop"}
 browsers={"chrome", "firefox"}
 parallel=false
 parallel.threads=4
