--- a/src/test/resources/conf.properties
+++ b/src/test/resources/conf.properties
@@ -12,6 +12,6 @@ resolution.laptop=1366x768
 resolution.tablet=1536x2048
 resolution.mobile=375x667
 resolutions={"desktop"}
-browsers={"chrome", "firefox"}
+browsers={"chrome"}
 parallel=false
 parallel.threads=4
